增加全局脱敏配置。

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -65,3 +65,7 @@ acooly.openapi.apidoc.outputTypes[0]=database
 acooly.security.csrf.exclusions.openapi[0]=/openapi/test/client/notifyUrl.html
 # log
 #acooly.log.level.com.acooly.openapi=DEBUG
+
+acooly.openapi.logSafety=true
+acooly.openapi.logSafetyIgnores=amount,name
+acooly.openapi.logSafetyMasks=payeeUserId,buyeryMobileNo,buyerCertNo
