--- a/openapi-framework-test/src/test/resources/application.properties
+++ b/openapi-framework-test/src/test/resources/application.properties
@@ -4,7 +4,6 @@ acooly.ds.username=root
 acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=0
 acooly.ds.autoCreateTable=true
-
 acooly.dubbo.enable=false
 acooly.dubbo.provider.port=10000
 acooly.dubbo.owner=qiubo
@@ -16,6 +15,8 @@ acooly.openapi.notify.enable=false
 acooly.openapi.apidoc.showCommon=true
 acooly.openapi.apidoc.outputTypes[0]=database
 #acooly.openapi.apidoc.outputTypes[1]=console
-
 ## cms
 #acooly.cms.enable=false
+acooly.openapi.logSafety=true
+acooly.openapi.logSafetyIgnores=amount,name
+acooly.openapi.logSafetyMasks=payeeUserId,buyeryMobileNo,buyerCertNo
