优化日志脱敏，支持ToString.xxx标注mask和ignore，采用正则匹配替换模式在输出日志前脱敏（正则不完美，优化中）

--- a/openapi-framework-test/src/test/resources/application.properties
+++ b/openapi-framework-test/src/test/resources/application.properties
@@ -18,5 +18,5 @@ acooly.openapi.apidoc.outputTypes[0]=database
 ## cms
 #acooly.cms.enable=false
 acooly.openapi.logSafety=true
-acooly.openapi.logSafetyIgnores=amount,name
-acooly.openapi.logSafetyMasks=payeeUserId,buyeryMobileNo,buyerCertNo
+#acooly.openapi.logSafetyIgnores=amount,name
+#acooly.openapi.logSafetyMasks=payeeUserId,buyeryMobileNo,buyerCertNo
