--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-common-facade</artifactId>
+            <version>${acooly.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
         </dependency>
