--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -65,7 +65,23 @@ acooly.openapi.apidoc.outputTypes[0]=database
 acooly.security.csrf.exclusions.openapi[0]=/openapi/test/client/notifyUrl.html
 # log
 #acooly.log.level.com.acooly.openapi=DEBUG
-
 acooly.openapi.logSafety=true
 acooly.openapi.logSafetyIgnores=amount,name
 acooly.openapi.logSafetyMasks=payeeUserId,buyeryMobileNo,buyerCertNo
+## \u5168\u5C40\u6240\u6709\u670D\u52A1\u79D2\u7EA7\u6D41\u63A71000\u8BF7\u6C42
+acooly.openapi.rates[0].partner-id=*
+acooly.openapi.rates[0].method=*
+acooly.openapi.rates[0].interval=1000
+acooly.openapi.rates[0].max-requests=1000
+
+## \u5168\u5C40queryUser\u670D\u52A1\u79D2\u7EA7\u6D41\u63A7100\u8BF7\u6C42
+acooly.openapi.rates[1].partner-id=*
+acooly.openapi.rates[1].method=queryUser
+acooly.openapi.rates[1].interval=1000
+acooly.openapi.rates[1].max-requests=100
+
+## \u5546\u6237(2019089021212230001)\u7684queryUser\u670D\u52A1\u79D2\u7EA7\u6D41\u63A7100\u8BF7\u6C42
+acooly.openapi.rates[2].partner-id=2019089021212230001
+acooly.openapi.rates[2].method=queryUser
+acooly.openapi.rates[2].interval=1000
+acooly.openapi.rates[2].max-requests=10
