--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -55,10 +55,22 @@ acooly.openapi.client.gateway=http://localhost:8089/gateway.do
 acooly.openapi.client.accessKey=test
 acooly.openapi.client.secretKey=06f7aab08aa2431e6dae6a156fc9e0b4
 acooly.openapi.client.showLog=true
-## apidoc
-acooly.openapi.apidoc.showCommon=true
-acooly.openapi.apidoc.outputTypes[0]=database
-#acooly.openapi.apidoc.outputTypes[1]=console
+# apidoc
+## [\u53EF\u9009] \u662F\u5426\u5199\u5165\u6240\u6709\u7684\u670D\u52A1\u5230\u9ED8\u8BA4\u7684\u901A\u7528scheme\uFF08\u65B9\u6848/\u83DC\u5355\uFF09
+acooly.openapi.apidoc.defaultSchemeEnable=true
+## [\u53EF\u9009] \u662F\u5426\u663E\u793A\u9ED8\u8BA4\u7684\u901A\u7528scheme
+acooly.openapi.apidoc.defaultSchemeShow=true
+## [\u53EF\u9009] \u751F\u4EA7\u7F51\u5173\u5730\u5740
+acooly.openapi.apidoc.gateway=http://api.xxx.com/gateway.do
+## [\u53EF\u9009] \u6D4B\u8BD5\u7F51\u5173\u5730\u5740
+acooly.openapi.apidoc.testGateway=http://127.0.0.1:8089/gateway.do
+## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9\u6807\u9898
+acooly.openapi.apidoc.portal.title=Acooly-OpenApi \u5F00\u653E\u5E73\u53F0
+## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9\u7248\u6743\u4FE1\u606F
+acooly.openapi.apidoc.portal.copyright=@Copyright Acooly 2019
+## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9logo
+acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
+
 ## cms
 #acooly.cms.enable=false
 # \u6D4B\u8BD5\u6A21\u5757\u4E2D\uFF0C\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53D7URL\u5FFD\u7565CSRF
@@ -73,13 +85,11 @@ acooly.openapi.rates[0].partner-id=*
 acooly.openapi.rates[0].method=*
 acooly.openapi.rates[0].interval=1000
 acooly.openapi.rates[0].max-requests=1000
-
 ## \u5168\u5C40queryUser\u670D\u52A1\u79D2\u7EA7\u6D41\u63A7100\u8BF7\u6C42
 acooly.openapi.rates[1].partner-id=*
 acooly.openapi.rates[1].method=queryUser
 acooly.openapi.rates[1].interval=1000
 acooly.openapi.rates[1].max-requests=100
-
 ## \u5546\u6237(2019089021212230001)\u7684queryUser\u670D\u52A1\u79D2\u7EA7\u6D41\u63A7100\u8BF7\u6C42
 acooly.openapi.rates[2].partner-id=2019089021212230001
 acooly.openapi.rates[2].method=queryUser
