--- a/openapi-framework-test/src/test/resources/acoolycoder.properties
+++ b/openapi-framework-test/src/test/resources/acoolycoder.properties
@@ -1,5 +1,5 @@
 #[database connection configurations]
-## [\u5FC5\u586B][mysql]
+## [\u5FC5\u586B][openapi.mysql]
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/acooly?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
