调整apidoc的自动生成数据库脚本的后台管理菜单为一级目录，防止OpenAPI主菜单未初始化时找不到父的BUG

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -5,10 +5,10 @@ acooly.ds.password=123456
 acooly.ds.slowSqlThreshold=1000
 acooly.ds.autoCreateTable=true
 ## dubbo (acooly.openapi.asyncNotify.enableFacade=true,\u6A21\u5757\u4F9D\u8D56)
-acooly.dubbo.enable=false
+acooly.dubbo.enable=true
 acooly.dubbo.provider.enable=true
 acooly.dubbo.provider.port=10000
-acooly.dubbo.owner=acooly
+acooly.dubbo.owner=openapi-framework
 ## openapi
 # \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
 acooly.openapi.enablePerfLog=true
@@ -44,7 +44,7 @@ acooly.openapi.notify.threadPool.queueCapacity=100
 acooly.openapi.notify.threadPool.namePrefix=OPENAPI-NOTIFY-TASK
 # [\u53EF\u9009:false] \u63A5\u53D7\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53E3OpenApiRemoteService\uFF08facade\uFF09\u662F\u5426\u5F00\u542F\u8FDC\u7A0Bdubbo\u670D\u52A1
 # \u9ED8\u8BA4\u4E3Afalse\uFF0C\u8868\u793A\u4E0D\u5F00\u542F\uFF0C\u5219\u4E0D\u66B4\u9732facade\u7684dubbo\u63A5\u53E3\uFF0C\u91C7\u7528\u76F4\u63A5\u672C\u5730spring\u670D\u52A1\u65B9\u5F0F
-acooly.openapi.notify.enableFacade=false
+acooly.openapi.notify.enableFacade=true
 # [\u53EF\u9009:5] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u65F6\uFF0C\u4ECE\u6570\u636E\u5E93\u6BCF\u6B21fetch\u7684\u6570\u91CF
 acooly.openapi.notify.retryFetchSize=10
 # [\u53EF\u9009:120] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u542F\u52A8\u95F4\u9694\uFF08\u79D2\uFF09
