apple patch from v4.2.2 , Amount OpenApiRemoteService 20191019

--- a/openapi-framework-notify/pom.xml
+++ b/openapi-framework-notify/pom.xml
@@ -41,5 +41,11 @@
             <version>${acooly.version}</version>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-appservice</artifactId>
+            <version>${acooly.version}</version>
+        </dependency>
     </dependencies>
 </project>
