解决枚举类型字段过大造成desc字段长度越界的问题。调整desc字段为JSON数据类型；删除脚本自动升级执行程序。

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -2,8 +2,8 @@
 acooly.ds.url=jdbc:mysql://127.0.0.1:3306/acooly-openapi
 acooly.ds.username=root
 acooly.ds.password=123456
-acooly.ds.slowSqlThreshold=1000
-acooly.ds.autoCreateTable=true
+acooly.ds.slow-sql-threshold=1000
+acooly.ds.auto-create-table=true
 ## dubbo (acooly.openapi.asyncNotify.enableFacade=true,\u6A21\u5757\u4F9D\u8D56)
 acooly.dubbo.enable=true
 acooly.dubbo.provider.enable=true
@@ -11,80 +11,70 @@ acooly.dubbo.provider.port=10000
 acooly.dubbo.owner=OpenApiFramework
 ## openapi
 # \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
-acooly.openapi.enablePerfLog=true
+acooly.openapi.enable-perf-log=true
 # \u7F51\u5173\u67E5\u8BE2\u65E5\u5FD7\u662F\u5426\u5206\u6587\u4EF6
-acooly.openapi.queryLogSeparationEnable=false
+acooly.openapi.query-log-separation-enable=false
 # \u7F51\u5173\u662F\u5426\u5728\u5B58\u50A8\u975E\u67E5\u8BE2\u7C7B\u8BF7\u6C42
-acooly.openapi.saveOrder=true
+acooly.openapi.save-order=true
 # \u7F13\u5B58\u914D\u7F6E\uFF08\u79D8\u94A5\u548C\u6743\u9650\uFF09
 acooly.openapi.auth-info-cache.enable=true
 acooly.openapi.auth-info-cache.defaultTimeout=7200000
 # \u7F51\u5173\u533F\u540D\u8BBF\u95EE\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u5F00\u542F\uFF0C\u53EF\u8BBF\u95EE\u767B\u5F55(login)\u63A5\u53E3.
 acooly.openapi.anonymous.enable=true
-acooly.openapi.anonymous.accessKey=anonymous
-acooly.openapi.anonymous.secretKey=anonymouanonymou
+acooly.openapi.anonymous.access-key=anonymous
+acooly.openapi.anonymous.secret-key=anonymouanonymou
 acooly.openapi.anonymous.permissions.login=*:login
 # \u7F51\u5173\u52A8\u6001\u767B\u5F55\u8BA4\u8BC1\u63A5\u53E3\uFF0C\u767B\u5F55\u8BA4\u8BC1\u903B\u8F91\u7531\u76EE\u6807\u9879\u76EE\u5B9E\u73B0com.acooly.openapi.framework.service.service.LoginApiService
 acooly.openapi.login.enable=true
-acooly.openapi.login.secretKeyDynamic=true
+acooly.openapi.login.secret-key-dynamic=true
 ## openapi asyncNotify
 # [\u53EF\u9009] \u662F\u5426\u542F\u52A8\u5F02\u6B65\u901A\u77E5
 acooly.openapi.notify.enable=true
 # [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4
-acooly.openapi.notify.connTimeout=20000
+acooly.openapi.notify.conn-timeout=20000
 # [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u8FDE\u8BFB\u53D6\u65F6\u65F6\u95F4
-acooly.openapi.notify.readTimeout=10000
+acooly.openapi.notify.read-timeout=10000
 # [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u6C60\u6838\u5FC3\u5927\u5C0F
-acooly.openapi.notify.threadPool.corePoolSize=10
+acooly.openapi.notify.thread-pool.corePoolSize=10
 # [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u6C60\u6700\u5927\u7EBF\u7A0B\u6570
-acooly.openapi.notify.threadPool.maxPoolSize=50
+acooly.openapi.notify.thread-pool.maxPoolSize=50
 # [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u6C60\u961F\u5217\u5927\u5C0F
-acooly.openapi.notify.threadPool.queueCapacity=100
+acooly.openapi.notify.thread-pool.queueCapacity=100
 # [\u53EF\u9009] \u5F02\u6B65\u901A\u77E5 \u901A\u77E5\u7EBF\u7A0B\u540D\u79F0
-acooly.openapi.notify.threadPool.namePrefix=OPENAPI-NOTIFY-TASK
+acooly.openapi.notify.thread-pool.name-prefix=OPENAPI-NOTIFY-TASK
 # [\u53EF\u9009:false] \u63A5\u53D7\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53E3OpenApiRemoteService\uFF08facade\uFF09\u662F\u5426\u5F00\u542F\u8FDC\u7A0Bdubbo\u670D\u52A1
 # \u9ED8\u8BA4\u4E3Afalse\uFF0C\u8868\u793A\u4E0D\u5F00\u542F\uFF0C\u5219\u4E0D\u66B4\u9732facade\u7684dubbo\u63A5\u53E3\uFF0C\u91C7\u7528\u76F4\u63A5\u672C\u5730spring\u670D\u52A1\u65B9\u5F0F
-acooly.openapi.notify.enableFacade=true
+acooly.openapi.notify.enable-facade=true
 # [\u53EF\u9009:5] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u65F6\uFF0C\u4ECE\u6570\u636E\u5E93\u6BCF\u6B21fetch\u7684\u6570\u91CF
-acooly.openapi.notify.retryFetchSize=10
+acooly.openapi.notify.retry-fetch-size=10
 # [\u53EF\u9009:120] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u542F\u52A8\u95F4\u9694\uFF08\u79D2\uFF09
-acooly.openapi.notify.retryPeriod=120
+acooly.openapi.notify.retry-period=120
 # test: openapi client
 acooly.openapi.client.enable=true
 acooly.openapi.client.gateway=http://localhost:8089/gateway.do
-acooly.openapi.client.accessKey=test
-acooly.openapi.client.secretKey=06f7aab08aa2431e6dae6a156fc9e0b4
-acooly.openapi.client.showLog=true
+acooly.openapi.client.access-key=test
+acooly.openapi.client.secret-key=06f7aab08aa2431e6dae6a156fc9e0b4
+acooly.openapi.client.show-log=true
 # apidoc
 ## [\u53EF\u9009] \u662F\u5426\u5199\u5165\u6240\u6709\u7684\u670D\u52A1\u5230\u9ED8\u8BA4\u7684\u901A\u7528scheme\uFF08\u65B9\u6848/\u83DC\u5355\uFF09
-acooly.openapi.apidoc.defaultSchemeEnable=true
+acooly.openapi.apidoc.default-scheme-enable=true
 ## [\u53EF\u9009] \u662F\u5426\u663E\u793A\u9ED8\u8BA4\u7684\u901A\u7528scheme
-acooly.openapi.apidoc.defaultSchemeShow=true
+acooly.openapi.apidoc.default-scheme-show=true
 ## [\u53EF\u9009] \u751F\u4EA7\u7F51\u5173\u5730\u5740
 acooly.openapi.apidoc.gateway=http://api.xxx.com/gateway.do
 ## [\u53EF\u9009] \u6D4B\u8BD5\u7F51\u5173\u5730\u5740
-acooly.openapi.apidoc.testGateway=http://127.0.0.1:8089/gateway.do
+acooly.openapi.apidoc.test-gateway=http://127.0.0.1:8089/gateway.do
 ## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9\u6807\u9898
 acooly.openapi.apidoc.portal.title=Acooly-OpenApi \u5F00\u653E\u5E73\u53F0
 ## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9\u7248\u6743\u4FE1\u606F
 acooly.openapi.apidoc.portal.copyright=@Copyright Acooly 2019
 ## [\u53EF\u9009] \u5F00\u53D1\u5E73\u53F0\u7F51\u7AD9logo
 acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
-## cms
-#acooly.cms.enable=false
-# \u6D4B\u8BD5\u6A21\u5757\u4E2D\uFF0C\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53D7URL\u5FFD\u7565CSRF
-acooly.security.csrf.exclusions.openapi-orderpay[0]=/openapi/test/orderCashierPay/client/notifyUrl.html
-acooly.security.csrf.exclusions.openapi-orderpay[1]=/openapi/test/orderCashierPay/client/returnUrl.html
-acooly.security.csrf.exclusions.openapi-orderpay[2]=/openapi/test/orderCashierPay/server/notifyUrl.html
-# \u63D0\u73B0\u63A5\u53E3\u5F02\u6B65\u901A\u77E5\u5BA2\u6237\u7AEF\u63A5\u6536URL\uFF08notifyUrl\uFF09
-acooly.security.csrf.exclusions.openapi-withdraw[0]=/openapi/test/withdraw/server/notifyCall.html
-acooly.security.csrf.exclusions.openapi-withdraw[1]=/openapi/test/withdraw/server/sendNotify.html
-acooly.security.csrf.exclusions.openapi-withdraw[2]=/openapi/test/withdraw/client/notifyUrl.html
 # log
 #acooly.log.level.com.acooly.openapi=DEBUG
-acooly.openapi.logSafety=true
-acooly.openapi.logSafetyIgnores=amount,name
-acooly.openapi.logSafetyMasks=payeeUserId,buyeryMobileNo,buyerCertNo
+acooly.openapi.log-safety=true
+acooly.openapi.log-safety-ignores=amount,name
+acooly.openapi.log-safety-masks=payeeUserId,buyeryMobileNo,buyerCertNo
 ## \u5168\u5C40\u6240\u6709\u670D\u52A1\u79D2\u7EA7\u6D41\u63A71000\u8BF7\u6C42
 acooly.openapi.rates[0].partner-id=*
 acooly.openapi.rates[0].method=*
@@ -100,3 +90,13 @@ acooly.openapi.rates[2].partner-id=2019089021212230001
 acooly.openapi.rates[2].method=queryUser
 acooly.openapi.rates[2].interval=1000
 acooly.openapi.rates[2].max-requests=10
+## cms
+#acooly.cms.enable=false
+# \u6D4B\u8BD5\u6A21\u5757\u4E2D\uFF0C\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53D7URL\u5FFD\u7565CSRF
+acooly.security.csrf.exclusions.openapi-orderpay[0]=/openapi/test/orderCashierPay/client/notifyUrl.html
+acooly.security.csrf.exclusions.openapi-orderpay[1]=/openapi/test/orderCashierPay/client/returnUrl.html
+acooly.security.csrf.exclusions.openapi-orderpay[2]=/openapi/test/orderCashierPay/server/notifyUrl.html
+# \u63D0\u73B0\u63A5\u53E3\u5F02\u6B65\u901A\u77E5\u5BA2\u6237\u7AEF\u63A5\u6536URL\uFF08notifyUrl\uFF09
+acooly.security.csrf.exclusions.openapi-withdraw[0]=/openapi/test/withdraw/server/notifyCall.html
+acooly.security.csrf.exclusions.openapi-withdraw[1]=/openapi/test/withdraw/server/sendNotify.html
+acooly.security.csrf.exclusions.openapi-withdraw[2]=/openapi/test/withdraw/client/notifyUrl.html
