调整依赖结构，从common分离出common-util模块，专用于集成工程的message模块依赖，可用于发布到外部作为SDK的部件。

--- a/openapi-framework-common-util/pom.xml
+++ b/openapi-framework-common-util/pom.xml
@@ -9,28 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>openapi-framework-service</artifactId>
+    <artifactId>openapi-framework-common-util</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.acooly</groupId>
-            <artifactId>openapi-framework-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.acooly</groupId>
-            <artifactId>acooly-component-mybatis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.acooly</groupId>
-            <artifactId>acooly-component-event</artifactId>
+            <artifactId>acooly-common</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <scope>provided</scope>
-        </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
-
 </project>
