--- a/openapi-framework-facade/pom.xml
+++ b/openapi-framework-facade/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>openapi-framework-common</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
