升级版本，添加swagger，并对字段定义进行说明

--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -100,3 +100,17 @@ acooly.openapi.rates[2].partner-id=2019089021212230001
 acooly.openapi.rates[2].method=queryUser
 acooly.openapi.rates[2].interval=1000
 acooly.openapi.rates[2].max-requests=10
+
+
+#swagger \u914D\u7F6E
+swagger.title=API
+swagger.desc=doc-api
+swagger.version=1.0.0-SNAPSHOT
+swagger.termsOfServiceUrl=javascript:void(0)
+swagger.license=Apache 2.0
+swagger.licenseUrl=http://www.apache.org/licenses/LICENSE-2.0.html
+swagger.basePackage=com.acooly.openapi
+swagger.groupName=default-group
+swagger.contactName=liangsong
+swagger.contactUrl=
+swagger.contactEmail=
