--- a/openapi-framework-assemble/pom.xml
+++ b/openapi-framework-assemble/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.0-xiyangdev-SNAPSHOT</version>
     </parent>
 
     <artifactId>openapi-framework-assemble</artifactId>
@@ -53,7 +53,7 @@
                     <artifactId>jsp-api</artifactId>
                 </exclusion>
             </exclusions>
-            <version>5.0.0-SNAPSHOT</version>
+            <version>${acooly.version}</version>
         </dependency>
 
         <dependency>
