--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.0-xiyangdev-SNAPSHOT</version>
     </parent>
 
     <artifactId>openapi-framework-test</artifactId>
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>acooly-coder</artifactId>
-            <version>5.0.0-SNAPSHOT</version>
+            <version>${acooly.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
