--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
             <dependency>
                 <groupId>com.acooly</groupId>
                 <artifactId>openapi-framework-common-util</artifactId>
-                <version>${parent.version}</version>
+                <version>5.0.0-xiyangdev-SNAPSHOT</version>
             </dependency>
 
             <dependency>
