--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -16,9 +16,9 @@ acooly.openapi.enable-perf-log=true
 acooly.openapi.query-log-separation-enable=false
 # \u7F51\u5173\u662F\u5426\u5728\u5B58\u50A8\u975E\u67E5\u8BE2\u7C7B\u8BF7\u6C42
 acooly.openapi.save-order=true
-# \u7F13\u5B58\u914D\u7F6E\uFF08\u79D8\u94A5\u548C\u6743\u9650\uFF09
-acooly.openapi.auth-info-cache.enable=false
-acooly.openapi.auth-info-cache.defaultTimeout=7200000
+# \u7F13\u5B58\u914D\u7F6E\uFF08\u79D8\u94A5\u548C\u6743\u9650\uFF09,2\u5206\u949F
+acooly.openapi.auth-info-cache.enable=true
+acooly.openapi.auth-info-cache.defaultTimeout=120000
 # \u7F51\u5173\u533F\u540D\u8BBF\u95EE\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u5F00\u542F\uFF0C\u53EF\u8BBF\u95EE\u767B\u5F55(login)\u63A5\u53E3.
 acooly.openapi.anonymous.enable=true
 acooly.openapi.anonymous.access-key=anonymous
