--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -37,7 +37,13 @@
 
         <dependency>
             <groupId>com.acooly</groupId>
-            <artifactId>acooly-component-config</artifactId>
+            <artifactId>acooly-component-cache</artifactId>
+            <version>5.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-web</artifactId>
         </dependency>
 
         <dependency>
@@ -54,6 +60,12 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-redis</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>2.6.2</version>
         </dependency>
     </dependencies>
 </project>
