升级为5.0.1-SNAPSHOT,用于暂时测试。主要内容包括： 1. 重构openapi-framework-common-util,采用最小化依赖，以保障可直接使用与SDK外部使用。 2. 在openapi-framework-common-util新增OpenApiTool工具类，可以直接在外部过SDK使用。 3. 财富test模块中的测试验证报文到test-message模块，用于开发验证SDK的外部报文包挂接。设计OpenApi的message包只能依赖acooly-common-type和openapi-framework-common-util

--- a/openapi-framework-common-util/pom.xml
+++ b/openapi-framework-common-util/pom.xml
@@ -5,23 +5,46 @@
     <parent>
         <artifactId>openapi-framework</artifactId>
         <groupId>com.acooly</groupId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>openapi-framework-common-util</artifactId>
 
     <dependencies>
+
+
         <dependency>
             <groupId>com.acooly</groupId>
-            <artifactId>acooly-common</artifactId>
+            <artifactId>acooly-common-type</artifactId>
         </dependency>
 
-
+        <!-- Servlet -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+
+        <!-- 摘要 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+
+        <!-- 日志 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <!-- 通讯：http client tool -->
+        <dependency>
+            <groupId>com.github.kevinsawicki</groupId>
+            <artifactId>http-request</artifactId>
+            <version>6.0</version>
+        </dependency>
+
+        <!-- 组报：JSON TOOL -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
