--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>acooly-app-independent-parent</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>openapi-framework</artifactId>
-    <version>5.0.0-SNAPSHOT</version>
+    <version>5.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>openapi-framework</name>
@@ -24,13 +24,13 @@
             <dependency>
                 <groupId>com.acooly</groupId>
                 <artifactId>openapi-framework-common-util</artifactId>
-                <version>${parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>com.acooly</groupId>
                 <artifactId>openapi-framework-common</artifactId>
-                <version>${parent.version}</version>
+                <version>${project.version}</version>
             </dependency>
 
             <dependency>
@@ -48,12 +48,6 @@
             <dependency>
                 <groupId>com.acooly</groupId>
                 <artifactId>openapi-framework-mock</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.acooly</groupId>
-                <artifactId>openapi-framework-test</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -86,6 +80,19 @@
                 <artifactId>openapi-framework-apidoc</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-test</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acooly</groupId>
+                <artifactId>openapi-framework-test-message</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
@@ -103,6 +110,7 @@
         <module>openapi-framework-mock</module>
         <module>openapi-framework-client</module>
         <module>openapi-framework-notify</module>
+        <module>openapi-framework-test-message</module>
 
     </modules>
 
