--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>openapi-framework-test</artifactId>
@@ -61,6 +61,10 @@
             <artifactId>acooly-component-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-test-message</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -73,6 +77,7 @@
             <artifactId>acooly-coder</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 
