改造test为专用的demo模块，用于SDK和OpenApiTools演示。

--- a/openapi-framework-assemble/pom.xml
+++ b/openapi-framework-assemble/pom.xml
@@ -43,6 +43,10 @@
             <artifactId>openapi-framework-extensions</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-demo-service</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.acooly</groupId>
