--- a/openapi-framework-assemble/src/main/resources/application.properties
+++ b/openapi-framework-assemble/src/main/resources/application.properties
@@ -73,13 +73,9 @@ acooly.openapi.apidoc.portal.logo=/portal/images/logo/logo-acooly-white.png
 ## cms
 #acooly.cms.enable=false
 # \u6D4B\u8BD5\u6A21\u5757\u4E2D\uFF0C\u5F02\u6B65\u901A\u77E5\u7684\u63A5\u53D7URL\u5FFD\u7565CSRF
-acooly.security.csrf.exclusions.openapi-orderpay[0]=/openapi/test/orderCashierPay/client/notifyUrl.html
-acooly.security.csrf.exclusions.openapi-orderpay[1]=/openapi/test/orderCashierPay/client/returnUrl.html
-acooly.security.csrf.exclusions.openapi-orderpay[2]=/openapi/test/orderCashierPay/server/notifyUrl.html
+acooly.security.csrf.exclusions.openapi-orderpay[0]=/openapi/demo/orderCashierPay/**/*
 # \u63D0\u73B0\u63A5\u53E3\u5F02\u6B65\u901A\u77E5\u5BA2\u6237\u7AEF\u63A5\u6536URL\uFF08notifyUrl\uFF09
-acooly.security.csrf.exclusions.openapi-withdraw[0]=/openapi/test/withdraw/server/notifyCall.html
-acooly.security.csrf.exclusions.openapi-withdraw[1]=/openapi/test/withdraw/server/sendNotify.html
-acooly.security.csrf.exclusions.openapi-withdraw[2]=/openapi/test/withdraw/client/notifyUrl.html
+acooly.security.csrf.exclusions.openapi-withdraw[0]=/openapi/demo/withdraw/**/*
 # log
 #acooly.log.level.com.acooly.openapi=DEBUG
 acooly.openapi.logSafety=true
