调整demo的演示cashier服务界面

--- a/openapi-framework-demo/openapi-framework-demo-service/pom.xml
+++ b/openapi-framework-demo/openapi-framework-demo-service/pom.xml
@@ -12,6 +12,10 @@
     <artifactId>openapi-framework-demo-service</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.acooly</groupId>
+            <artifactId>acooly-component-web</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.acooly</groupId>
