在core模块加入demo-service的依赖。

--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -31,6 +31,10 @@
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-demo-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-facade</artifactId>
         </dependency>
 
