1、认证授权功能支持通过服务码查询接入方信息（在缓存中查询）。

--- a/openapi-framework-service/pom.xml
+++ b/openapi-framework-service/pom.xml
@@ -18,6 +18,11 @@
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
+            <artifactId>openapi-framework-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.acooly</groupId>
             <artifactId>acooly-component-mybatis</artifactId>
         </dependency>
         <dependency>
