--- a/openapi-framework-notify/pom.xml
+++ b/openapi-framework-notify/pom.xml
@@ -5,11 +5,12 @@
     <parent>
         <artifactId>openapi-framework</artifactId>
         <groupId>com.acooly</groupId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.0-SNAPSHOT-optimize</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>openapi-framework-notify</artifactId>
+    <version>5.0.0-SNAPSHOT-optimize</version>
 
     <dependencies>
 
