--- a/openapi-framework-service/pom.xml
+++ b/openapi-framework-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>openapi-framework</artifactId>
         <groupId>com.acooly</groupId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.0-SNAPSHOT-optimize</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,11 +15,6 @@
         <dependency>
             <groupId>com.acooly</groupId>
             <artifactId>openapi-framework-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.acooly</groupId>
-            <artifactId>openapi-framework-core</artifactId>
-            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.acooly</groupId>
