--- a/openapi-framework-test/pom.xml
+++ b/openapi-framework-test/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.0.0-SNAPSHOT</version>
+        <version>5.0.0-SNAPSHOT-optimize</version>
     </parent>
 
     <artifactId>openapi-framework-test</artifactId>
