--- a/openapi-framework-core/pom.xml
+++ b/openapi-framework-core/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.0.0-SNAPSHOT-optimize</version>
+        <version>5.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>openapi-framework-core</artifactId>
