在openapi-framework-client中还原商户接入指南，回复接入标准文档。

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -10,6 +10,8 @@ acooly.dubbo.provider.enable=true
 acooly.dubbo.provider.port=10001
 acooly.dubbo.owner=OpenApiFramework
 
+acooly.ofile.storageRoot=/var/log/webapps/openapi-test/media
+
 ## openapi
 # \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
 acooly.openapi.enable-perf-log=true
