--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <!-- 继承基础配置,核心依赖包，编译选项和插件配 -->
     <parent>
         <groupId>com.acooly</groupId>
-        <artifactId>acooly-app-independent-parent</artifactId>
+        <artifactId>acooly-app-dependencies</artifactId>
         <version>5.2.0</version>
     </parent>
     <artifactId>openapi-framework</artifactId>
