--- a/openapi-framework-facade/pom.xml
+++ b/openapi-framework-facade/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>openapi-framework</artifactId>
-        <version>5.2.0</version>
+        <version>5.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>openapi-framework-facade</artifactId>
     <dependencies>
