--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <parent>
         <groupId>com.acooly</groupId>
         <artifactId>acooly-app-dependencies</artifactId>
-        <version>5.2.0</version>
+        <version>5.2.0-SNAPSHOT</version>
     </parent>
     <artifactId>openapi-framework</artifactId>
-    <version>5.2.0</version>
+    <version>5.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>openapi-framework</name>
