完成OpenApi的按需MOCK（使用文档的demo作为响应数据）功能开发，

--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -5,12 +5,14 @@ acooly.ds.password=123456
 acooly.ds.slow-sql-threshold=1000
 acooly.ds.auto-create-table=true
 ## dubbo (acooly.openapi.asyncNotify.enableFacade=true,\u6A21\u5757\u4F9D\u8D56)
-acooly.dubbo.enable=true
-acooly.dubbo.provider.enable=true
+acooly.dubbo.enable=false
+acooly.dubbo.provider.enable=false
 acooly.dubbo.provider.port=10001
 acooly.dubbo.owner=OpenApiFramework
 acooly.ofile.storageRoot=/var/log/webapps/openapi-test/media
+
 ## openapi
+acooly.openapi.mock.enable=true
 
 ## \u65E5\u5FD7\u914D\u7F6E
 # [\u53EF\u9009] \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
