--- a/openapi-framework-assemble/src/main/resources/application-sdev.properties
+++ b/openapi-framework-assemble/src/main/resources/application-sdev.properties
@@ -10,10 +10,8 @@ acooly.dubbo.provider.enable=false
 acooly.dubbo.provider.port=10001
 acooly.dubbo.owner=OpenApiFramework
 acooly.ofile.storageRoot=/var/log/webapps/openapi-test/media
-
-## openapi
+## openapi mock\u5F00\u5173
 acooly.openapi.mock.enable=true
-
 ## \u65E5\u5FD7\u914D\u7F6E
 # [\u53EF\u9009] \u7F51\u5173\u6027\u80FD\u65E5\u5FD7\u5F00\u5173
 acooly.openapi.log.perf-log-enable=true
@@ -21,7 +19,6 @@ acooly.openapi.log.perf-log-enable=true
 acooly.openapi.log.mult-file-enable=false
 # [\u53EF\u9009] \u7F51\u5173\u662F\u5426\u5728\u5B58\u50A8\u975E\u67E5\u8BE2\u7C7B\u8BF7\u6C42
 acooly.openapi.save-order=true
-
 ## \u65E5\u5FD7\u8131\u654F
 # [\u53EF\u9009] \u5F00\u5173
 acooly.openapi.log-safety=false
@@ -29,7 +26,6 @@ acooly.openapi.log-safety=false
 acooly.openapi.log-safety-ignores=amount,name
 # [\u53EF\u9009] \u9700\u8981Mask(\u9690\u85CF\u90E8\u5206\u6570\u636E)\u7684\u5B57\u6BB5\uFF0C\u591A\u4E2A\u9017\u53F7\u5206\u9694\u3002\u4F8B\u5982\uFF1AmobileNo,certNo
 acooly.openapi.log-safety-masks=payeeUserId,buyeryMobileNo,buyerCertNo
-
 ## \u7F13\u5B58\u914D\u7F6E
 # [\u53EF\u9009] \u7F13\u5B58\u603B\u5F00\u5173\uFF0C\u5982\u679C\u5F00\u542F\uFF0C\u81EA\u52A8\u542F\u52A8\u4E8C\u7EA7\u7F13\u5B58\uFF08redis\uFF09\u3002
 acooly.openapi.auth-info-cache.enable=true
@@ -39,7 +35,6 @@ acooly.openapi.auth-info-cache.defaultTimeout=600000
 acooly.openapi.auth-info-cache.levelOneEnable=true
 # [\u53EF\u9009] \u4E00\u7EA7\u672C\u5730\u7F13\u5B58\u7F13\u5B58\u4FE1\u606F\u8FC7\u671F\u65F6\u95F4,\u5355\u4F4D\uFF1Ams,\u9ED8\u8BA410\u5206\u949F
 acooly.openapi.auth-info-cache.levelOneTimeout=600000
-
 ## \u52A8\u6001\u8BA4\u8BC1\u548C\u533F\u540D\u8BBF\u95EE\uFF08\u901A\u8FC7\u533F\u540D\u8EAB\u4EFD\u8BBF\u95EElogin\u63A5\u53E3\u52A8\u6001\u83B7\u53D6\u4F1A\u8BDD\u79D8\u94A5\uFF09
 # [\u53EF\u9009] \u7F51\u5173\u533F\u540D\u8BBF\u95EE\u914D\u7F6E\uFF0C\u9ED8\u8BA4\u5F00\u542F\uFF0C\u53EF\u8BBF\u95EE\u767B\u5F55(login)\u63A5\u53E3.
 acooly.openapi.anonymous.enable=true
@@ -50,8 +45,6 @@ acooly.openapi.anonymous.permissions.login=*:login
 acooly.openapi.login.enable=true
 # [\u53EF\u9009] \u6BCF\u6B21\u8BBF\u95EE\u662F\u5426\u52A8\u6001\u751F\u6210\u79D8\u94A5
 acooly.openapi.login.secret-key-dynamic=true
-
-
 ## \u5F02\u6B65\u901A\u77E5\u914D\u7F6E
 # [\u53EF\u9009] \u662F\u5426\u542F\u52A8\u5F02\u6B65\u901A\u77E5
 acooly.openapi.notify.enable=true
@@ -74,7 +67,6 @@ acooly.openapi.notify.enable-facade=true
 acooly.openapi.notify.retry-fetch-size=10
 # [\u53EF\u9009:120] \u5F02\u6B65\u901A\u77E5\u91CD\u53D1\u542F\u52A8\u95F4\u9694\uFF08\u79D2\uFF09
 acooly.openapi.notify.retry-period=120
-
 ## [\u53EF\u9009] \u6D41\u91CF\u63A7\u5236
 # \u4F8B\u5982\uFF1A\u5168\u5C40\u6240\u6709\u670D\u52A1\u79D2\u7EA7\u6D41\u63A71000\u8BF7\u6C42
 acooly.openapi.rates[0].partner-id=*
@@ -91,15 +83,12 @@ acooly.openapi.rates[2].partner-id=2019089021212230001
 acooly.openapi.rates[2].method=queryUser
 acooly.openapi.rates[2].interval=1000
 acooly.openapi.rates[2].max-requests=10
-
-
 # test: openapi client
 acooly.openapi.client.enable=true
 acooly.openapi.client.gateway=http://localhost:8089/gateway.do
 acooly.openapi.client.access-key=test
 acooly.openapi.client.secret-key=06f7aab08aa2431e6dae6a156fc9e0b4
 acooly.openapi.client.show-log=true
-
 # apidoc
 ## [\u53EF\u9009] \u662F\u5426\u5199\u5165\u6240\u6709\u7684\u670D\u52A1\u5230\u9ED8\u8BA4\u7684\u901A\u7528scheme\uFF08\u65B9\u6848/\u83DC\u5355\uFF09
 acooly.openapi.apidoc.default-scheme-enable=true
